[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://game_screen/pickup.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 18, 48, 12, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 17, 32, 15, 16 )

[node name="Pickup" type="Control"]
margin_right = 128.0
margin_bottom = 16.0
script = ExtResource( 2 )

[node name="IconContainer" type="HBoxContainer" parent="."]
margin_right = 128.0
margin_bottom = 16.0
alignment = 1

[node name="PaydayIcon" type="TextureRect" parent="IconContainer"]
margin_left = 48.0
margin_right = 60.0
margin_bottom = 16.0
texture = SubResource( 7 )

[node name="MoodUpIcon" type="TextureRect" parent="IconContainer"]
margin_left = 64.0
margin_right = 79.0
margin_bottom = 16.0
texture = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]
